# quickstart-cpp-default

./: CMakeLists.txt  Project.cmake
cmake/: Build.cmake  ExternalDeps.cmake  Unittest.cmake
src/: CMakeLists.txt
src/launcher/: CMakeLists.txt
tests/: CMakeLists.txt
